--- a/00_Piscine_datascience/ex03/Dockerfile
+++ b/00_Piscine_datascience/ex03/Dockerfile
@@ -1,6 +1,7 @@
 FROM postgres:latest
 
-RUN apt-get update && apt-get install -y python3 python3-pip
+RUN apt-get update && apt-get install -y python3 python3-pip python3-pandas
+# RUN pip3 install pandas
 
 COPY automatic_table.py /docker-entrypoint-initdb.d/automatic_table.py
-COPY ../customer /docker-entrypoint-initdb.d/customer
+# COPY ../customer /docker-entrypoint-initdb.d/customer
